--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -23,11 +23,37 @@
     
                     <select class="form-select"  aria-label="Seleccione una categoria" id="categoria"  required>
                         <option value="0" >Seleccione una categoria</option>
-                        <option value="1">Calzado</option>
-                        <option value="2">Prendas de Vestir</option>
-                        <option value="3">Cosmeticos</option>
-                        <option value="4">Electrodomestico</option>
-                        <option value="5">Productos Plasticos</option>
+
+                        <% if ( Categoria == 'Calzado') { %>
+                            <option value="1" selected>Calzado</option>
+                        <% } else { %>
+                            <option value="1">Calzado</option>
+                        <% }  %>
+
+                        <% if ( Categoria == 'Prendas') { %>
+                            <option value="2" selected>Prendas de Vestir</option>
+                        <% } else { %>
+                                <option value="2">Prendas de Vestir</option>
+                        <% }  %>
+
+                        <% if ( Categoria == 'Cosmeticos') { %>
+                            <option value="3" selected>Cosmeticos</option>
+                        <% } else { %>
+                            <option value="3">Cosmeticos</option>
+                        <% }  %>
+
+
+                        <% if ( Categoria == 'Electrodomesticos') { %>
+                            <option value="4" selected>Electrodomesticos</option>
+                        <% } else { %>
+                            <option value="4">Electrodomesticos</option>
+                        <% }  %>
+
+                        <% if ( Categoria == 'ProdPlas') { %>
+                            <option value="5" selected>Productos Plasticos</option>
+                        <% } else { %>
+                            <option value="5">Productos Plasticos</option>
+                        <% }  %>
                     </select>
     
                     <form action="/AddProduct" method="post" class="row g-3 py-3"> 
@@ -91,7 +117,7 @@
                 </div>
     
                 <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                    <h2>Productos</h2>
+                    <h2>Listado de <%= Categoria %></h2>
                     <table class="table primary">
                         <thead>
                           <tr>
@@ -103,27 +129,31 @@
                           </tr>
                         </thead>
 
-                        <tbody>
-                              <tr>
-                                    <td class="centrado"><%= Producto.Productos %></td>
-                                    <td class="centrado"><%= Producto.Precio %></td>
-                                    <td class="centrado"><%= Producto.Existencia %></td>
-                                    <td class="centrado"><%= Producto.Fecha_Ingreso %></td>
+                        <% if ( Producto != null) { %>
+                        <% Producto[0].forEach((product) => { %>
+                            <tbody>
+                                <tr>
+                                        <td class="centrado"><%= product.Productos %></td>
+                                        <td class="centrado"><%= product.Precio %></td>
+                                        <td class="centrado"><%= product.Existencia %></td>
+                                        <td class="centrado"><%= product.Fecha_Ingreso %></td>
 
-                                    <td>
-                                        <!-- Botones de acciones -->
-                                        <a href="#" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                          <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                          <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                                        </svg></a> 
-                                        <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= Producto.Categoria %>','<%= Producto.Id_Producto %>','<%= Producto.IdCat %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                                          <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                                          <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                                        </svg></a>
-                                      </td>
+                                        <td>
+                                            <!-- Botones de acciones -->
+                                            <a href="#" class="btn btn-success mb-1" title="Actualizar"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+                                            </svg></a> 
+                                            <a href="#" class="btn btn-danger" title="Eliminar" onclick="confirmDelete('<%= product.Categoria %>','<%= product.Id_Producto %>','<%= product.IdCat %>')"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                            </svg></a>
+                                        </td>
 
-                              </tr>
-                          </tbody>   
+                                </tr>
+                            </tbody>   
+                        <% }) %> 
+                        <% } %> 
                     </table>
                   </div>
     
