--- a/views/Compras.ejs
+++ b/views/Compras.ejs
@@ -4,34 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Compras Comercial Jennifer</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/resources/css/style.css" />
     <link rel="shortcut icon" href="/resources/images/favicon.ico" />
 
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap5.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap5.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.0.6/css/dataTables.dataTables.css" />
   </head>
+
   <body>
     <%- include('sidebar.ejs') %>
 
@@ -214,6 +196,7 @@
                   </div>
                 </div>
               </div>
+
               <div id="CompraProductos"class="panel-flotante panel-ancho"style="display: none">
                 <div class="panel-content">
                   <h4>Seleccion de productos</h4>
@@ -221,17 +204,9 @@
                     <div class="row">
                       <div class="col-sm-12 col-md-10 col-lg-10 col-xl-10">
                         <div class="mb-3">
-                          <label for="text" class="form-label"
-                            >Seleccionar categoria del producto a añadir</label
-                          >
-                          <select
-                          class=" px-2 form-select"
-                          id="categoriaSelect1"
-                          onchange="mostrarTablaSegunCategoria1()"
-                        >
-                          <label for="Categoria" class="form-label"
-                            >Seleccione la categoria del prodcuto que desea</label
-                          >
+                          <label for="text" class="form-label" >Seleccionar categoria del producto a añadir</label>
+                          <select class=" px-2 form-select" id="categoriaSelect1" onchange="mostrarTablaSegunCategoria()">
+                          <label for="Categoria" class="form-label" >Seleccione la categoria del producto que desea</label>
                           <option selected>Seleccione una categoria</option>
                           <option value="1">Calzado</option>
                           <option value="2">Prendas de Vestir</option>
@@ -253,7 +228,7 @@
                                 <th class="centrado">Tipo</th>
                                 <th class="centrado">Talla</th>
                                 <th class="centrado">Modelo</th>
-                                <th class="centrado col-xl-1">Accion</th>
+                                <th class="centrado col-xl-1"></th>
                               </tr>
                               <tbody>
                                 <tr>
@@ -516,21 +491,9 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script
-      type="text/javascript"
-      language="javascript"
-      src="https://code.jquery.com/jquery-3.5.1.js"
-    ></script>
-    <script
-      type="text/javascript"
-      language="javascript"
-      src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      language="javascript"
-      src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js"
-    ></script>
+    <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js" ></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js" ></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js" ></script>
 
     <!--  <% if (typeof alert != "undefined") { %>
       <script>
@@ -549,7 +512,7 @@
     <script src="/resources/js/script.js"></script>
     <script src="/resources/js/ScriptCompras.js"></script>
     
-
+<!-- 
     <script>
       $(document).ready(function () {
         $("#TableVentas").DataTable({
@@ -571,7 +534,7 @@
           },
         });
       });
-    </script>
+    </script> -->
 
 
     
