--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -55,9 +55,9 @@
         <li>
           <a href="/Compras">
             <i class='bx bxs-shopping-bags'></i>
-            <span class="links_name">Inicio</span>
+            <span class="links_name">Compras</span>
           </a>
-          <span class="tooltip">Inicio</span>
+          <span class="tooltip">Compras</span>
         </li>
 
         <li>
@@ -74,18 +74,20 @@
           </a>
           <span class="tooltip">Abonos</span>
         </li>
-<!--         <li>
+
+        <li class="mt-5">
           <a href="#">
-            <i class="bx bx-cog"></i>
-            <span class="links_name">Configuracion</span>
+            <i class='bx bx-log-out' ></i>
+            <span class="links_name">Cerrar Sesión</span>
           </a>
-          <span class="tooltip">Configuracion</span>
-        </li> -->
+          <span class="tooltip">Cerrar Sesión</span>
+        </li> 
       </ul>
     </div>
 
     <script src="resources/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    
   </body>
 </html>
